[project]
name = "face-swap-defender"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "insightface>=0.7.3",
    "onnxruntime==1.19.2",  # 클라우드 CPU 환경 구동을 위한 표준 런타임 변경
    "supabase>=2.3.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "torch>=2.12.1",
    "streamlit>=1.58.0",
    "streamlit-javascript>=0.1.5",
    "torchvision>=0.27.1",
    "tracker_hub @ git+https://github.com/gohard-lab/tracker-hub.git",
    "opencv-python-headless",  # 서버 환경 전용 단일 패키지 고정
]